Spacing fix

--- a/index.css
+++ b/index.css
@@ -199,7 +199,7 @@ nav a:hover {
 }
 
 #container3 {
-    margin-top: 20px;
+    margin: 20px 0px;
     display: flex;
     justify-content: flex-start;
     align-items: center;
